--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
+title: "Personal Website"
+description: "Presentation Website"
 theme: jekyll-theme-minimal
-title: Axel NAY's homepage
-description: Presentation website.
